# dify-openai-search-plugin

./: manifest.yaml  pyproject.toml
models/llm/: _position.yaml  gpt-5.1.yaml  gpt-5.2.yaml  llm.py
